make some improvements, add bibliography

--- a/3_preface/1_symbols.tex
+++ b/3_preface/1_symbols.tex
@@ -5,15 +5,7 @@
 
  \noindent$\mathbb{N}$~---~множина натуральних чисел; \\
  \noindent$\mathbb{R}$~---~множина дійсних чисел; \\
-%  \noindent$\mathbb{R}^n$~---~$n$-вимірний векторний простір над полем дійсних чисел; \\
-%  \noindent$\mathbb{R}_+^n$~---~множина векторів із невід'ємними координатами в $\mathbb{R}^n$; \\
-%  \noindent$\Delta^n$~---~$n$-вимірний симплекс; \\
-%  \noindent$\Delta^X$~---~$\left| X \right|$-вимірний симплекс, координати якого проіндексовані елементами з множини $X$; \\
-%  \noindent$\left| X \right| $~---~потужність множини $X$, або кардинальне число множини $X$; \\
-%  \noindent$conv \left( X \right)$~---~опукла оболонка множини $X$; \\
-%  \noindent$X \times Y$~---~декартів добуток множин $X$ та $Y$; \\
-%  \noindent$\langle \pmb{x}, \pmb{y} \rangle$~---~скалярний добуток векторів $\pmb{x}$ та $\pmb{y}$; \\
-%  \noindent$\mathcal{O} \left( \cdot \right)$~---~<<О>> велике, нотація Ландау;
+ \noindent$\mathbb{R}^n$~---~$n$-вимірний векторний простір дійсних чисел; \\
 \\
 \\
 \textbf{Позначення, введені в дисертації}
@@ -23,5 +15,4 @@
  \noindent$P$~---~множина координат пікселів зображення; \\
  \noindent$C$~---~множина інтенсивностей пікселів зображення; \\
  \noindent$F_p^i$~---~інтенсивність пікселя з координатою $p$$\in$$P$; \\
- %\noindent$\mathcal{N} \left( v \right)$~---~множина вершин графу, інцидентних вершині $v$; \\
- %\noindent$\mathcal{N}$~---~множина пар інцидентних вершин графу;
+ Б-К алгоритм ~---~алгоритм Бойкова-Колмогорова; \\
