--- a/3_preface/2_preface.tex
+++ b/3_preface/2_preface.tex
@@ -1,7 +1,7 @@
 \chapter*{Вступ}
 \addcontentsline{toc}{chapter}{Вступ}
 
-Дана робота завдячує Кригіну Валерію Михайлович~---~молодшому
+Дана робота завдячує Кригіну Валерію Михайловичу~---~молодшому
 науковому співробітнику Відділу обробки та розпізнавання
 образів Міжнародного науково-навчального центру інформаційних
 технологій і систем НАН України та МОН України.
@@ -11,57 +11,58 @@
 а з масовим переходом навчання у віддалений режим
 стала більш актуальною проблема створення якісних
 лекційних матеріалів, зокрема слайдів, які містять
-стислу суть занять. Було б добре мати технологію, що 
-перетворюватиме відео лекцію у стисле слайд шоу, на 
-якому будуть написи з дошки без викладача і до того 
+стислу суть занять. Було б добре мати технологію, що
+перетворюватиме відео лекцію у стисле слайд шоу, на
+якому будуть написи з дошки без викладача і до того
 ж всю область дошки, навіть якщо камера
 рухалась.
 
 \textbf{Мета і завдання дослідження.}
 
-\textit{Об'єкт дослідження}~---~математичні методи 
+\textit{Об'єкт дослідження}~---~математичні методи
 реєстрації зображень.
 
-\textit{Предмет дослідження}~---~автоматична обробка 
+\textit{Предмет дослідження}~---~автоматична обробка
 відеозаписів.
 
-Метою роботи є розробка алгоритму, що перетворює відео 
+Метою роботи є розробка алгоритму, що перетворює відео
 лекції у панорамні знімки без викладача.
 
 Завдання наступні:
 \begin{enumerate}
   \item
-    вивчити методи обробки та порівняння зображень, 
-    які знадобляться для створення панорамних знімків;
-    \item
-    вивчити та доповнити математичні методи, 
-    що допоможуть визначати рухомі об'єкти;
+        вивчити та доповнити математичні методи,
+        що допоможуть визначати рухомі об'єкти;
   \item
-  розробити демонстраційне програмне забезпечення.
+        опрацювати літературу про згорткові мережі, які застосовуються
+        для знаходження в кадрі людини;
+  \item
+        вивчити методи обробки та порівняння зображень,
+        які знадобляться для створення панорамних знімків;
+  \item
+        розробити демонстраційне програмне забезпечення.
 \end{enumerate}
 
 \textbf{Методи дослідження:}
 \begin{enumerate}
-    \item опрацювання літератури за темою;
-    \item створення теоретичного підґрунтя алгоритму;
-    \item написання програми;
-    \item аналіз отриманих результатів.
+  \item опрацювання літератури за темою;
+  \item створення теоретичного підґрунтя алгоритму;
+  \item написання програми;
+  \item аналіз отриманих результатів.
 \end{enumerate}
 
 \textbf{Наукова новизна одержаних результатів.}
 
-Створено алгоритм та реалізовано інформаційну технологію 
+Створено алгоритм та реалізовано інформаційну технологію
 для одержання панорамних слайдів з відео лекції.
 
 \textbf{Практичне значення одержаних результатів.}
 
-За допомогою програми викладач може надати короткий вміст 
-відео матеріалу. Наступними кроками є автоматичне детектування 
-дошки, розбиття її сектори та розпізнавання написаного на 
+За допомогою програми викладач може надати короткий вміст
+відео матеріалу. Наступними кроками є автоматичне детектування
+дошки, розбиття її сектори та розпізнавання написаного на
 дошці тексту та формул.
 
 \textbf{Публікації.}
-
-.... Всеукраїнська науково-практична конференція студентів,
-аспірантів та молодих вчених <<Теоретичні і прикладні проблеми фізики,
-математики та інформатики>>.
+Міжнародний науковий журнал “Control Systems and Computers” 
+(“Системи керування та комп'ютери”).
