--- a/5_problem/3_solution.tex
+++ b/5_problem/3_solution.tex
@@ -1,87 +1,85 @@
 \section{Пропоновані рішення}
 
 
-У даній роботі описується алгоритм напівавтоматичного 
-створення слайдів на основі відеозапису лекції (рис. \ref{fig:pipeline}).
-За допомогою наведеного алгоритму можна обробляти відео 
-у режимі реального часу, адже кожна його ітерація потребує 
-лише поточний на попередні кадри. Між кожною парою 
-сусідніх кадрів відео розраховується бінарна маска областей, де 
-потенційно знаходяться рухомі об'єкти. 
+У даній роботі описується алгоритм напівавтоматичного
+створення слайдів на основі відеозапису лекції (Рис. \ref{fig:pipeline}).
+За допомогою наведеного алгоритму можна обробляти відео
+у режимі реального часу, адже кожна його ітерація потребує
+лише поточний на попередні кадри. Між кожною парою
+сусідніх кадрів відео розраховується бінарна маска областей, де
+потенційно знаходяться рухомі об'єкти або викладач в залежності від методу
+створення маски.
 
-
-Ті частини зображення, де не було помічено рух або людина, 
-зберігаються до зображення, яке ми в даній роботі називаємо панорамою, тому що 
-це зображення може розширюватись у випадку, коли камера рухається 
-навмисно або хитається через небажаний вплив на неї. 
-Отриману панораму ми порівнюємо з тими панорамами, що було отримано на 
-попередніх кроках, і створюємо новий слайд, якщо було помічено 
+Ті частини зображення, де не було помічено рух або людина,
+зберігаються до зображення, яке ми в даній роботі називаємо панорамою, тому що
+це зображення може розширюватись у випадку, коли камера рухається
+навмисно або хитається через небажаний вплив на неї.
+Отриману панораму ми порівнюємо з тими панорамами, що були отримані на
+попередніх кроках, і створюємо новий слайд, якщо було помічено
 достатню кількість змін.
 
-
-Інформаційна технологія, що реалізує даний алгоритм, працює в 
-напівавтоматичному режимі – вона потребує від користувача введення 
+Інформаційна технологія, що реалізує даний алгоритм, працює у
+напівавтоматичному режимі – вона потребує від користувача введення
 деяких параметрів.
 \begin{enumerate}
-    \item Крок або кількість кадрів між тими які беруться в обробку.
+    \item Крок або кількість кадрів між тими, які беруться в обробку.
     \item Ступінь згладжування маски рухомих об'єктів для алгоритму Бойкова-Колмогорова.
     \item Рівень довіри присутності людини для згорткових мереж.
-    \item Крок між панорамами для перевірки необхідності створення нового слайду.
+    \item Крок між панорамами для перевірки необхідності створення нового панорамного слайду.
     \item Кількість необхідних змін між двома панорамами для створення нового слайду.
 \end{enumerate}
 
 
 \usetikzlibrary{arrows,positioning,shapes}
 \begin{figure}
-\begin{center}
-\begin{tikzpicture}[node distance=4mm, >=latex',
- block/.style = {draw, rectangle, minimum height=10mm, minimum width=28mm,align=center},
-rblock/.style = {draw, rectangle, rounded corners=0.5em},
-tblock/.style = {draw, trapezium, minimum height=10mm, 
-                 trapezium left angle=75, trapezium right angle=105, align=center},
-                        ]
-    \node [rblock]                           (video)        {Відео};
-    \node [block, below=of video]            (mov_objects)  {Побудова маски\\ рухомих об’єктів};
-    \node [block, right=of mov_objects]      (pan)          {Побудова панорамами};
-    \node [block, right=of pan]              (denoise)      {Зниження рівня\\ шуму};
-    \node [rblock,above=of denoise]          (slides)       {Слайди};
+    \begin{center}
+        \begin{tikzpicture}[node distance=4mm, >=latex',
+                block/.style = {draw, rectangle, minimum height=10mm, minimum width=28mm,align=center},
+                rblock/.style = {draw, rectangle, rounded corners=0.5em},
+                tblock/.style = {draw, trapezium, minimum height=10mm,
+                        trapezium left angle=75, trapezium right angle=105, align=center},
+            ]
+            \node [rblock]                           (video)        {Відео};
+            \node [block, below=of video]            (mov_objects)  {Побудова маски\\
+                рухомих об’єктів або людини};
+            \node [block, right=of mov_objects]      (pan)          {Побудова панорамами};
+            \node [block, right=of pan]              (denoise)      {Зниження рівня\\ шуму};
+            \node [rblock,above=of denoise]          (slides)       {Слайди};
 
-%% paths (borowed from Harish Kumar)
-    \path[draw,->] (video)         edge    (mov_objects)
-                   (mov_objects)   edge    (pan)
-                   (pan)           edge    (denoise)
-                   (denoise)       edge    (slides)
-                   ;
-\end{tikzpicture}
-\end{center}
-\caption{Процедура створення панорамних слайдів
-\label{fig:pipeline}
-}
+            \path[draw,->] (video)         edge    (mov_objects)
+            (mov_objects)   edge    (pan)
+            (pan)           edge    (denoise)
+            (denoise)       edge    (slides)
+            ;
+        \end{tikzpicture}
+    \end{center}
+    \caption{Процедура створення панорамних слайдів
+        \label{fig:pipeline}
+    }
 \end{figure}
 
 \section{Вхід алгоритму}
 
-Для опису алгоритму створення панорамних слайдів потрібно визначити 
-вхідні дані та параметри, які буде надавати користувач інформаційної
-технології.
+Для опису алгоритму створення панорамних слайдів потрібно визначити та
+описати об'єкти з якими взаємодіє інформаційна технологія.
 
-Дошка - це плоска поверхня, яку знімає камера. Це може бути крейдяна 
+Дошка - це плоска поверхня, яку знімає камера. Це може бути крейдяна
 дошка, маркерна дошка, стіна тощо.
 
-Записи - це ті місця дошки, де відбулася зміна кольору, яка тривала 
-відносно довгий час. Важливо зауважити, що ці записи мають бути 
+Записи - це ті місця дошки, де відбулася зміна кольору, яка тривала
+відносно довгий час. Важливо зауважити, що ці записи мають бути
 саме у площині дошки, при чому людина яка проходить біля неї не вважається
 зміною кольору, оскільки цей рух був не тривалим.
 
-В область огляду камери має потрапляти дошка або її частина. Наведений 
+В область огляду камери має потрапляти дошка або її частина. Наведений
 алгоритм не розрахований на відео, що містить декілька дошок, які знаходяться
-не в одній плоскій площині. Камера, що знімає це відео, може рухатись, проте 
-чим більше вона нерухома, тим краще: алгоритм не буде працювати, якщо камера 
-рухається постійно. Дошка на відео може перекриватися сторонніми об'єктами, 
-проте бажано, щоб ці об'єкти були рухливими, щоб алгоритм виявлення рухомих 
-об'єктів їх помічав.
+не в одній плоскій площині. Камера, що знімає це відео, може рухатись, проте
+чим більше вона нерухома, тим краще: алгоритм не буде працювати, якщо камера
+рухається постійно. Дошка на відео може перекриватися сторонніми об'єктами,
+проте бажано, щоб ці об'єкти були рухливими, щоб алгоритм виявлення рухомих
+об'єктів їх помічав та для подальшого оновлення написів на дошці.
 
-Кадром під номером $i$ шириною $w$ і висотою $h$ називаємо відображення, де 
+Кадром під номером $i$ шириною $w$ і висотою $h$ називаємо відображення, де
 $P$$\to$$C$, де $P$ - множина координат пікселів, $С$ - скінченна множина можливих рівнів
 яскравостей (інтенсивностей) пікселів.
 \begin{equation}
