--- a/5_problem/4_conclusion.tex
+++ b/5_problem/4_conclusion.tex
@@ -2,4 +2,6 @@
 
 Зроблена постановка задачі створення слайдів. Проведений аналіз 
 проблем. Описано ввідні дані алгоритму та запропонована 
-його схема.
+його блок-схема. Таким чином, для створення інформаційної технології 
+потрібно вивчити методи локалізації людини або рухливих об'єктів.
+Також потрібно зробити стабілізацію відео і панорамне склеювання кадрів. 
