--- a/6_mask/1_preface.tex
+++ b/6_mask/1_preface.tex
@@ -1,4 +1,4 @@
-Третій розділ присвячено опису методів отримання маски людини, 
-щоб в подальшому прибрати викладача з кадру. Запропоновано використання
-алгоритму Бойкова-Колмогорова, згорткових мереж та їх комбінацій
-YOLO, MobileNet, SSDLite, Faster R-CNN.
+Третій розділ присвячено опису методів отримання маски людини та маски
+рухомих об'єктів, щоб в подальшому прибрати викладача з кадру.
+Описано будову алгоритму Бойкова-Колмогорова, згорткових мереж та їх комбінацій
+YOLO, MobileNet, SSD, R-СNN.
