--- a/6_mask/2_bk_algorithm.tex
+++ b/6_mask/2_bk_algorithm.tex
@@ -2,24 +2,29 @@
 
 \subsection{Задача знаходження Min-Cut/Max-Flow}
 
-Ведемо позначення:
-$T$ - множина вузлів графу (рис. \ref{fig:graph_example}),
-$\tau$ - множина направлених дуг,
-$s$ - джерело (початок),
-$e$ - стік (кінець),
-$N_t = \{t^{'}: tt^{'} \in \tau \}$,
-$P_t = \{t^{'}: t^{'}t \in \tau \}$,
-$f$ - потік,
-$c$ - пропускна здатність,
+Перед описом алгоритму Бойкова-Колмогорова варто зрозуміти яку конкретну
+задачу він вирішує. Існує проблема знаходження мінімального зрізу або їй
+еквівалентна максимального потоку. Дана задача базується на концепції
+трубопроводів. Є мережа труб, кожна з яких має свою пропускну здатність
+та потік води, що вона пропускає. У даній мережі є джерело води та стік(кінець мережі).
+Головна задача - знайти максимальний потік, який потрібно пропустити через джерело,
+щоб ефективно використовувати трубопроводи.
 
-\begin{figure}[h]
+Якщо дану концепцію перекласти у мову
+математики, то мережею трубопроводів є граф $G$ (Рис. \ref{fig:graph_example})
+з множинами вузлів $T$ та направлених дуг(ребер) $\tau$. В ньому є джерело $s$,
+стік $e$, дві множини дуг $N_t = \{t^{'}: tt^{'} \in \tau \}$ та $P_t = \{t^{'}: t^{'}t \in \tau \}$,
+які складають $\tau$. Потік позначатимемо як $f$, а пропускну здатність $c$.
+
+\begin{figure}[H]
     \centering
-    \includegraphics[width=0.6\textwidth]{images/graph_example}
-    \caption{Приклад графу}
-    \label{fig:graph_example}
+    \includegraphics[width=0.5\textwidth]{images/graph_example}
+    \caption{Приклад графу
+        \label{fig:graph_example}
+    }
 \end{figure}
 
-Задача максимального потоку
+Задача максимального потоку формулюється так:
 
 \begin{equation}
     \sum_{t \in N_s} f_{st} \rightarrow \max_{f: \tau \rightarrow R }
@@ -43,7 +48,15 @@ $c$ - пропускна здатність,
     \item Потік завжди додатній.
 \end{enumerate}
 
-Оригінальний алгоритм:
+Як вже було зазначено вирішивши задача максимального потоку одночасно вирішується і задача
+мінімального зрізу. Даний висновок отримується з Max-Flow Min-Cut теореми.
+Мінімальним зрізом є множина тих ребер, які стали насиченими після знаходження максимального
+потоку. Тобто мінімальний зріз створює дві множини, що формують множину всіх дуг.
+
+
+
+Вирішення Min-cut/Max-Flow задачі може базуватись на двох принципах:
+з використанням пошуку в глибину (Едмондса-Карпа) або пошуку в ширину (Форда-Фалкерсона).
 
 \begin{algorithm}[H]
     \caption{Алгоритм Min-Cut/Max-Flow}
@@ -52,7 +65,7 @@ $c$ - пропускна здатність,
         \State \textbf{Вихід:} $ F_{maxflow} $ - значення максимального потоку;
         \State \textbf{Ініціалізація:} $ F_{maxflow} = 0, f_{tt^{'}}^{0} = 0 \quad \forall tt^{'}  \in \tau $.
         \State \textbf{Поки існує шлях з $s$ в $e$ повторюємо кроки 1,2:}
-        \State \textbf{Крок 1:} Знаходимо шлях від $s$ до $e$. (алгоритм Едмонса-Карпа або Форда Фалкерсона).
+        \State \textbf{Крок 1:} Знаходимо шлях від $s$ до $e$ (пошуком в ширину чи в глибину).
         \State Відвідуємо $ t^{'}$ із $t $ якщо:
         \State \qquad 1. $ f_{tt^{'}} \neq c_{tt^{'}} $
         \State \qquad 2. $ \nexists p_{t^{'}}^{i} \Rightarrow p_{t^{'}}^{i} = t $ (запам'ятали вершину)
@@ -63,7 +76,7 @@ $c$ - пропускна здатність,
         \State \qquad 3. Оновлюємо $ F_{maxflow}: F_{maxflow}^{i+1} = F_{maxflow}^{i} + \vartriangle f^{i} $
     \end{algorithmic}
 
-    Знайшовши максимальний потік можемо знайти мінімальний зріз: \\
+    Знайшовши максимальний потік, можемо знайти і мінімальний зріз: \\
     Для $\forall t \in T$ знайти $\theta_{t} \in \{0,1\}$
     \begin{algorithmic}
         \State \textbf{Крок 3}: Запускаємо пошук в ширину або глибину вже з оновленим графом.
@@ -72,19 +85,20 @@ $c$ - пропускна здатність,
     \end{algorithmic}
 \end{algorithm}
 
-У 2004 році Юрій Бойков та Володимир Колмогоров запропонували модификацію вищеописаного
-методу.
+У 2004 році Юрій Бойков та Володимир Колмогоров запропонували свій підхід \cite{boykov_kolmogorov}
+у вирішенні Max-Flow/Min-Cut задачі.
 Запропонована ідея методу полягає в огментації шляхів. Будується два дерева $S$ та $T$
 коренями яких є $s$ та $t$ відповідно. Вершини загально діляться на ті що в $S$, $T$, та
 \textit{вільні}. Кожне дерево має \textit{активні} та \textit{внутрішні} вершини.
-Алгоритм складається зі стадій \textit{росту}, \textit{огментації}, \textit{всиновлення}.\\
+\textbf{Алгоритм Бойкова-Колмогорова} складається зі стадій \textit{росту},
+\textit{огментації}, \textit{всиновлення}.\\
 Коротко розглянемо кожну з них:
 
 \begin{enumerate}
     \item \textbf{Стадія Росту} \\
-          Відбувається одночасний ріст дерев з вершин $s$ та $e$, знаходяться активні
-          вершини і додають їх як вершини, що відвідали. Після такого сканування вершини
-          стають внутрішніми. Цей процес продовжується поки не зостанеться не активної вершини.
+          Проводимо одночасний ріст дерев з вершин $s$ та $e$, знаходимо активні
+          вершини і додаємо їх як вершини, що відвідали. Після такого сканування вершини
+          стають внутрішніми. Цей процес продовжується поки не залишиться не активної вершини.
     \item \textbf{Стадія Огментації} \\
           На цій стадії шлях, що був знайдений на попередньому етапі огментується(розділення)
           по ребру залишкової пропускної здатності (\textit{bottleneck}). Якщо ребра дерева стають
@@ -114,6 +128,6 @@ $c$ - пропускна здатність,
 \end{figure}
 
 Найбільша перевага даного алгоритму це те що, він працює швидше та краще на графах-решітках
-(рис.\ref{fig:graph_lattice}).
+(Рис. \ref{fig:graph_lattice}).
 Оскільки саме таку структуру ми використовуємо в алгоритмі Б-К для отримання маски рухомих
 об'єктів це дає змогу оброблювати кадри відео досить швидко.
