--- a/6_mask/3_bk_algorithm_applying.tex
+++ b/6_mask/3_bk_algorithm_applying.tex
@@ -1,6 +1,10 @@
 \section{Застосування алгоритму Бойкова-Колмогорова}
 
-Введемо поняття \textbf{маски рухомих об'єктів}.
+Окремо Б-К алгоритм не є корисним для детекції рухомих об'єктів. У даній роботі 
+використано метод \cite{pavliuk_krygin}, який у свою чергу використовує алгоритм Б-К 
+для пошуку мінімального розрізу на графі, що дозволяє знаходити
+маску рухомих об'єктів та має можливість налаштовувати ступінь взаємодії сусідніх
+пікселів.
 
 Маскою рухомих об'єктів кадру \(F^{i}\) будемо називати бінарне
 зображення \(B^{i}:P \rightarrow \left\{ 0,1 \right\}\), де тим
@@ -52,20 +56,20 @@
 		}
 	\end{subfigure}
 	
-	\caption{Процес створення маски рухомих об'єктів з відео \cite{yakovlev_video}
+	\caption{Процес створення маски рухомих об'єктів з відео \cite{yakovlev_discrete_math_video}
 		\label{fig:yakovlev:bk_examples}
 	}
 \end{figure}
 
 
 Для того, щоб видалити всі рухомі об'єкти, які можуть перекривати дошку, ми
-беремо кадри \(F^{i}\) та \(F^{i + s}\)  ( рис. \ref{fig:yakovlev:bk_examples},
+беремо кадри \(F^{i}\) та \(F^{i + s}\)  ( Рис. \ref{fig:yakovlev:bk_examples},
 \subref{fig:yakovlev:bk_examples:a},
 \subref{fig:yakovlev:bk_examples:b}) та для
 кожної пари кольорів пікселів \(p\) з однаковими координатами знаходимо
 модуль \(D_{p}^{i} = \left| F_{p}^{i} - F_{p}^{i + s} \right|\) різниці
-інтенсивностей (Рис. 2 (в)). Зображення \(D^{i}\) подаємо на вхід
-алгоритму Бойкова-Колмогорова.
+інтенсивностей (Рис. \ref{fig:yakovlev:bk_examples:c}). Зображення \(D^{i}\) подаємо на вхід
+Б-К алгоритму.
 
 Треба знайти маску $B^{i}:P \rightarrow \{0,1\}$ рухомих
 об'єктів для кадрів \(F^{i}\) і \(F^{i + s}\).
@@ -97,8 +101,8 @@ $\Gamma \subset P^{2}$ сусідніх пікселів. У даній робо
 \end{equation}
 
 
-На виході отримуємо маску \(B_{p}^{i}\) рухомих об'єктів ( рис.
-\ref{fig:yakovlev:bk_examples:d} ).
+На виході отримуємо маску \(B_{p}^{i}\) рухомих об'єктів (Рис.
+\ref{fig:yakovlev:bk_examples:d}).
 Її ми використовуємо, щоб не переносити на фінальне зображення ті
 пікселі, на яких було помічено рух, адже зміна яскравості пікселя
 виникає не тільки під час створення напису, а й під час тимчасового
