--- a/6_mask/4_cnn.tex
+++ b/6_mask/4_cnn.tex
@@ -8,16 +8,16 @@
 відповідає одиниця, а іншим відповідає нуль.
 
 
-Для локалізації людини були використані так звані \textbf{згорткові нейронні мережі}
-(англ. \textit{convolutional neural networks, CNN}).
+Для локалізації людини (створення маски людини) були використані так звані
+\textbf{згорткові нейронні мережі} (англ. \textit{convolutional neural networks, CNN}).
 Це частина машинного навчання, яке називається глибоким навчанням, оскільки використовується
 більше двох нейронних шарів разом зі згортковими.
 
-В таких мережах застосовується операція згортки(англ. \textit{convolution})
+В таких мережах застосовується операція згортки (англ. \textit{convolution})
 та пулінгу (англ. \textit{pooling}), батч-нормалізація, та різні функції
 активації такі як ReLU, Tanh.
 
-Надалі послідовну комбінацію (згортка + батч-нормалізації + функція активації)
+Надалі комбінацію (згортка + батч-нормалізації + функція активації)
 будемо називати згортковим шаром, але кожний автор нейронної мережі
 створює свої шари відмінні від вищезазначеного.
 
@@ -31,15 +31,13 @@
 
 Розглянемо архітектури нейронних мереж, що застосовувались у роботі
 для локалізації людини. Всі нищеописані нейронні мережі були використані вже з
-натренованими вагами у програмній бібліотеці PyTorch \cite{NEURIPS2019_9015}.
-За мету було поставлено підібрати таку мережу, що здатна швидко оброблювати
-один знімок навіть на смартфоні. Тому головним критерієм є швидкість.
+натренованими вагами у програмній бібліотеці PyTorch \cite{pytorch_library}.
+За мету було поставлено підібрати таку мережу, що здатна швидко та якісно оброблювати
+один знімок навіть на смартфоні.
 
 \subsection{YOLO: You-Only-Look-Once}
 
-YOLO - це сімейство нейронних мереж.
-
-YOLOv1 вперше представили Joseph Redmon.
+YOLO - це сімейство нейронних мереж. YOLOv1 вперше представили Joseph Redmon.
 Вона розв'язує задачу детекції об'єктів як задачу регресії
 щодо просторового розділення знайдених областей об'єктів та їх
 ймовірностей. Її зараз широко використовують для класифікації та знаходженні об'єктів
@@ -68,7 +66,7 @@ YOLOv1 вперше представили Joseph Redmon.
 \begin{figure}[H]
     \includegraphics[width=0.5\linewidth]{images/cnn_yolo1}
     \centering
-    \caption{Процес локалізації об'єктів мережею YOLO \cite{RedmonYolo}
+    \caption{Процес локалізації об'єктів мережею YOLO \cite{yolov1}
     }
 \end{figure}
 
@@ -105,7 +103,7 @@ $\mathbb{1}_{ij}^{obj}$ чи в комірці $i$ в $j$-ій області з
 \begin{figure}[H]
     \includegraphics[width=0.8\linewidth]{images/cnn_yolo2}
     \centering
-    \caption{Архітектура YOLOv1 \cite{RedmonYolo}
+    \caption{Архітектура YOLOv1 \cite{yolov1}
     }
 \end{figure}
 
@@ -116,14 +114,14 @@ $\mathbb{1}_{ij}^{obj}$ чи в комірці $i$ в $j$-ій області з
     \includegraphics[width=0.5\linewidth]{images/cnn_yolo3}
     \centering
     \caption{Графік залежності точності на датасеті COCO від швидкості обробки однієї
-        картинки різними мережами YOLOv5 н
+        картинки різними мережами YOLOv5
     }
 \end{figure}
 
 \subsection{MobileNet}
 
 MobileNet це також ще одне сімейство, що часто використовується у комп'ютерному зорі.
-Вперше була представлена у 2017 році науковцями з Google \ref{mobilenetv1}.
+Вперше була представлена у 2017 році науковцями з Google \cite{mobilenetv1}.
 Мережі даної категорії теж зробили свою революцію у обчисленні глибоких шарів з
 використанням мінімальних обчислювальних ресурсів. Були запропоновані два гіперпараметри,
 змінюючи які, можна отримати прирости в швидкості та точності. Мережі MobileNet
@@ -135,17 +133,19 @@ MobileNet це також ще одне сімейство, що часто ви
 \subsubsection{Mobilenetv1}
 
 Одним з головних задач для побудови першої мережі даного сімейства була заміна
-звичайного згорткового шару на новий глибинно просторовий згортковий шар
-(англ. \textit{Depth-wise Separable Convolution}).
+звичайного згорткового шару на новий глибинно просторовий згортковий шар 
+(Рис. \ref{fig:cnn:deep_wise_sep_conv}) (англ. \textit{depth-wise separable convolution}).
 
 Нехай маємо:
-- квадратне зображення $I$ розмірами $S_I \times S_I \times M$ : широта, висота та
-кількість каналів відповідно.
-- ядро $C$ розмірами $S_C \times S_C \times M \times N$, де $N$ вихідна розмірність
-отриманої згортки.
-- вихідна згортка $C$ розмірами $S_K \times S_K \times N$
+\begin{itemize}
+    \item квадратне зображення $I$ розмірами $S_I \times S_I \times M$ : широта, висота та
+          кількість каналів відповідно;
+    \item ядро $C$ розмірами $S_C \times S_C \times M \times N$, де $N$ вихідна розмірність
+          отриманої згортки;
+    \item вихідна згортка $C$ розмірами $S_K \times S_K \times N$.
+\end{itemize}
 
-Тоді формулу звичайної згортки (Рис. \ref{fig:cnn:simple_conv}) можна записати як:
+Тоді формулу звичайної згортки (Рис. \ref{fig:cnn:conv_operation}) можна записати як:
 
 \begin{equation}
     G_{k,l,n} = \sum_{i,j,m} C_{i,j,m,n} · F_{k+i-1, l+j-1,m}
@@ -155,8 +155,8 @@ MobileNet це також ще одне сімейство, що часто ви
 Щоб обчислити дану згортку потрібно $S_C · S_C · M · N · S_I · S_I$ операцій, що
 є створює обчислювальні обмеження на мобільний пристрій, якщо наприклад матимемо
 декілька таких згорток.
-Для вирішення даної проблеми застосовується глибинна згортка (Рис. ). Вона полягає
-у отриманні окремої згортки кожного каналу ядра до кожного каналу
+Для вирішення даної проблеми застосовується глибинна згортка (Рис. \ref{fig:cnn:deep_wise_conv}).
+Вона полягає у застосуванні окремої згортки кожного каналу ядра до кожного каналу
 зображення.
 Нехай $\widehat{C}$ ядро глибинної згортки, тоді маємо:
 
@@ -197,7 +197,7 @@ $S_C · S_C · M · S_I · S_I + M · N · S_I · S_I$ операцій.
 Таке нововведення до глибинного навчання дало змогу в рази пришвидшити
 навчання та швидкість нейронної мережі MobileNetv1. Вона використовує
 просторово глибинні згортки розміром ядра $3 \times 3$.
-Таким чином маємо таку заміну блоку.
+Таким чином маємо таку заміну блоку (Рис. \ref{fig:cnn:mobilenetv1_conv_layer}).
 
 \begin{figure}[H]
     \centering
@@ -212,14 +212,14 @@ $S_C · S_C · M · S_I · S_I + M · N · S_I · S_I$ операцій.
 ширини та розмірності.
 Множник ширини $\alpha$ застосовується, щоб зменшити кожен шар мережі, що
 в свою чергу дає приріст у швидкості.
-З множником  $\alpha \in (0,1]$ потрібно буде зробити
+Iз множником  $\alpha \in (0,1]$ потрібно буде зробити
 $S_C · S_C · \alpha M · S_I · S_I + \alpha M · \alpha N · S_I · S_I$ операцій.
 Множник розмірності $\rho$ зменшує вхідну картинку і відповідно
-розмірність згорток. Разом з $\alpha$  та $\rho \in (0,1]$ необхідно буде
+розмірність згорток. Разом із $\alpha$  та $\rho \in (0,1]$ необхідно буде
 $S_C · S_C · \alpha M · \rho S_I · \rho S_I + \alpha M ·\alpha  N · \rho S_I · \rho S_I$
 операцій.
 
-Повна архітектура мережі MobileNetv1 виглядає так:
+Повна архітектура мережі MobileNetv1 виглядає так (Рис. \ref{fig:cnn:mobilenetv1_architecture}):
 
 \begin{figure}[H]
     \centering
@@ -233,8 +233,8 @@ $S_C · S_C · \alpha M · \rho S_I · \rho S_I + \alpha M ·\alpha  N · \rho S
 \subsubsection{Mobilenetv2}
 
 Вже у 2018 році з'являється 2-га версія мережі MobileNet. Тут автори додали нові зміни в
-архітектуру такі як інвертовані залишки (англ. \textit{Inverted Residuals}) та
-лінійні вузькі містя (англ.\textit{Linear Bottlenecks}). Також представили застосування
+архітектуру такі як інвертовані залишки (англ. \textit{inverted residuals}) та 
+лінійні вузькі містя (англ. \textit{linear bottlenecks}). Також представили застосування
 особливостей MobileNetv2 у фреймворку для локалізації SSDLite, що теж був використаний
 в даній роботі.
 
@@ -248,8 +248,8 @@ $S_C · S_C · \alpha M · \rho S_I · \rho S_I + \alpha M ·\alpha  N · \rho S
 
 
 \begin{enumerate}
-    \item Нехай на вході зображення розмірами $S_I · S_I · M$, його приймає перший розширяючий блок.
-          Головна особливість цього блоку є новий параметр $t$, що називається розширяючим фактором.
+    \item Нехай на вході зображення розмірами $S_I · S_I · M$, його приймає перший розширюючий блок.
+          Головна особливість цього блоку є новий параметр $t$, що називається розширюючим фактором.
           Найкращими значеннями для нього є $[5,10]$. Менші значення краще застосовувати для меншої мережі,
           а більші відповідно для більших. Саме тут можна побачити різноманітність інтересів.
           Вихід $S_I · S_I · (t·M)$.
@@ -279,9 +279,9 @@ $S_C · S_C · \alpha M · \rho S_I · \rho S_I + \alpha M ·\alpha  N · \rho S
 \end{figure}
 
 
-Також варто відмітити, що автори вдосконалили мережу SSD (Single Shot Detector), він подібний
+Також варто відмітити, що автори вдосконалили мережу SSD (Single Shot Detector), вона подібна
 до YOLO і застосовується для локалізації об'єктів. Автори замінили звичайні згорткові шари
-на розширяючі згорткові, які використовуються в MobileNetv2. Таким чином створивши досконалішу
+на розширюючі згорткові, які використовуються в MobileNetv2. Таким чином створивши досконалішу
 версію SSDLite, про це буде описано пізніше.
 
 \subsubsection{MobileNetv3}
@@ -296,11 +296,11 @@ $S_C · S_C · \alpha M · \rho S_I · \rho S_I + \alpha M ·\alpha  N · \rho S
 до уваги певні особливості мережі MnasNet \cite{mnasnet}, в якій з'явився блок стиснення та збудження
 (англ. squeeze and excitation). Мережі з такими блоками називаються Se-Nets.
 
-Мета підходу стиснення та збудження \ref{senet_block} полягає в тому, щоб взяти параметри виходу згортки (нехай
-це матриця $u_c$ розмірами $C \times H \times W$) 
+Мета підходу стиснення та збудження (Рис. \ref{senet_block}) полягає в тому, щоб взяти параметри 
+виходу згортки (нехай це матриця $u_c$ розмірами $C \times H \times W$)
 як вхід блоку стиснення та збудження,
-потім зробити операцію стиснення (маємо $1 \times 1 \times C$), операцію збудження ($1 \times 1 \times C$). Далі
-потрібно масштабувати параметри щоб поєднати $u_c$.
+потім зробити операцію стиснення (маємо $1 \times 1 \times C$), операцію збудження ($1 \times 1 \times C$). 
+Далі потрібно масштабувати параметри щоб поєднати $u_c$.
 Ідея полягає в тому, щоб підвищити чутливість мережі до інформативних ознак і передавати їх
 до наступного кроку.
 
@@ -398,8 +398,8 @@ architecture structure), яка створена для  підбирання г
 \end{figure}
 
 Головна задача MultiBox це оцінювати як точно локалізувати об'єкти. Тут використовується
-дві штрафні функції: довіри, що основана на категоріальній перехресній ентропії та
-локалізації з L2 нормою, яка показує як точно справжня область об'єкту співпадає
+дві штрафні функції: довіри, в основі якої лежить категоріальна перехресна ентропія та
+локалізація з L2 нормою, яка показує як точно справжня область об'єкту співпадає
 із передбаченою.
 
 Варто також помітити, що SSD застосовує вже фіксовані області для подальшого передбачення
@@ -430,31 +430,31 @@ architecture structure), яка створена для  підбирання г
 Перша мережа R-CNN складалась з 3 незалежних один від одного етапів.
 На першому генерується 2000 пропозицій областей за допомогою
 вибіркового пошуку. Далі ці області проходять стиснення розміру до якогось
-фіксованого. Останній етап це метод опорних векторів вже з натренованими 
+фіксованого. Останній етап це метод опорних векторів вже з натренованими
 вагами, який і робить класифікацію.
 
-R-CNN не була досить потужною, оскільки використовувала вибірковий пошук, 
+R-CNN не була досить потужною, оскільки використовувала вибірковий пошук,
 який займає чимало часу. Також варто відмітити, що потрібно зберігати чимало
 кешованих даних для натренованої мережі, щоб натренувати CNN.
 
-Багато проблем було вирішено вже з новою Fast R-CNN. В ній відсутні етапи як такі,
+Багато проблем було вирішено вже з новою Fast R-CNN. У ній відсутні етапи як такі,
 а вся архітектура складається з одного модуля, що в рази полегшує
-навчання мережі. Тут також вводиться новий шар ROI Pooling, головна ціль якого 
-надати вектори ознак фіксованої довжини. Даний шар розбиває кожний запропонований 
-регіон на решітку, в кожній клітинці якій потім знаходиться максимальне значення
-(операція max pooling). Але навіть якщо і  Fast R-CNN швидша за R-CNN в ній досі 
+навчання мережі. Тут також вводиться новий шар ROI Pooling, головна ціль якого
+надати вектори ознак фіксованої довжини. Даний шар розбиває кожний запропонований
+регіон на решітку, в кожній клітинці потім знаходимо максимальне значення
+(операція max pooling). Але навіть якщо і  Fast R-CNN швидша за R-CNN в ній досі
 лишився вибірковий алгоритм.
 
 У Faster R-CNN \cite{faster_rcnn}, який саме теж тестувався для локалізації людини в
-цій роботі, запропоновано використовувати RPN (Region Proposal Network), як спосіб 
+цій роботі, запропоновано використовувати RPN (Region Proposal Network), як спосіб
 генерації областей-кандидатів та Fast R-CNN для виявлення об'єктів в цих областях.
 Ці два етапи поєднуються в одну мережу за допомогою поширення ознак (feature sharing).
 
 
 \textbf{RPN}  приймає на вхід картинку, і повертає множину координат прямокутних областей як подальших
-кандидатів для класифікації з їхніми мірами присутності об'єкту. RPN - повнозв'язна 
+кандидатів для класифікації з їхніми мірами присутності об'єкту. RPN - повнозв'язна
 згорткова мережа, що значить в ній немає лінійних шарів. Саме вона стала заміною
-вибіркового алгоритму у Fast R-CNN. 
+вибіркового алгоритму у Fast R-CNN.
 
 \begin{figure}[H]
     \centering
@@ -465,22 +465,22 @@ R-CNN не була досить потужною, оскільки викори
 \end{figure}
 
 У RPN ми застосовуємо принцип ковзкого вікна (sliding window) на згортковій мапі ознак,
-отриманої після останнього згорткового шару. Кожне таке вікно відображається 
-на вектор меншої розмірності. Для кожного вікна генеруються прямокутні області-кандидати, 
+отриманої після останнього згорткового шару. Кожне таке вікно відображається
+на вектор меншої розмірності. Для кожного вікна генеруються прямокутні області-кандидати,
 що називаються якірними регіонами (anchor boxes) з параметрами масштабу та співвідношення сторін.
 Далі цей вектор подається на вхід двом повнозв'язним
 шарам: локалізації об'єктів(box-regression layer) та класифікації(box-classification layer).
-Використання якірних регіонів дозволяє детектувати об'єкти практично будь-якого масштабу та 
+Використання якірних регіонів дозволяє детектувати об'єкти практично будь-якого масштабу та
 пов'язувати ознаки RPN з Fast R-CNN.
 
 Як вже було сказано, принцип поширення ознак дозволяє поєднати вихід RPN як вхід в Fast R-CNN.
-Головна його ідея у використанні одних і тих же згорток у двох мережах, що дозволяє тренувати 
+Головна його ідея у використанні одних і тих же згорток у двох мережах, що дозволяє тренувати
 RPN разом  з Fast R-CNN,  а не окремо.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\textwidth]{images/cnn_faster_rcnn_architecture}
-    \caption{Архітектура мережі Faster R-CNN \cite{faster_rcnn_website}
+    \caption{Архітектура мережі Faster R-CNN \cite{faster_rcnn_web_article}
         \label{fig:cnn:faster_rcnn_architecture}
     }
 \end{figure}
