--- a/7_panorama/2_frames_matching.tex
+++ b/7_panorama/2_frames_matching.tex
@@ -16,7 +16,7 @@
 камера виглядає статичною, а сегменти дошки поступово стають видимими та
 поєднуються для утворення панорами.
 
-Ми можемо використовувати дескриптори ознак, такі як SIFT, SURF або ORB, 
+Ми можемо використовувати дескриптори ознак, такі як SIFT, SURF або ORB,
 щоб знайти ключові точки (feature points / keypoints). Був обраний SIFT, оскільки під час
 експериментів він надав візуально кращі результати, ніж інші алгоритми.
 
@@ -24,8 +24,7 @@
 \subsection{SIFT}
 
 У 1999 році англієць Девід Лоу представив алгоритм SIFT (Scale-invariant feature transform)
-\cite{sift}
-,укр. \textit{Масштабозалежне перетворення ознак}. Даний алгоритм
+\cite{sift}, (укр. \textit{масштабозалежне перетворення ознак}). Даний алгоритм
 застовується для знаходження ключових точок (локальних ознак) зображення. Метод досить точно
 і швидко знаходить дані точки.
 Головною перевагою алгоритму є інваріантність щодо просторової орієнтації та якості освітлення.
@@ -35,66 +34,70 @@
 Коротко розпишемо структуру алгоритму.
 
 \begin{enumerate}
-    \item \textbf{Пошук масштабно-просторових екстремумів}
+    \item \textbf{Пошук масштабно-просторових екстремумів.}\\
           На даному етапі потрібно знайти зони зображення та такі масштаби, які можна повторно
           знайти при різних перспективах(точок погляду). Тут використовується просторово та
-          масштабно інваріантне ядро оператора Гауса з операцією згортки
+          масштабно інваріантне ядро оператора ґауса з операцією згортки
           до зображення $L(x,y,\sigma) = G(x,y,\sigma) \ast I(x,y)$,
           де $G(x,y,\sigma) = (1/2\pi\sigma^2)\exp({-(x^2+y^2)/2\sigma^2})$.
 
 
-          Будується різниця гаусіан (DoG метод) з константою $k$:
+          Будується різниця ґаусіан (DoG метод) (Рис. \ref{fig:swift1}) з константою $k$:
 
           \begin{equation}
               D(x,y,\sigma) = (L(x,y,k\sigma) - L(x,y,\sigma))
-              %  \cite{}
           \end{equation}
 
-          Тобто початкове зображення поступово піддається згорткам гаусіанів з константою
+          Тобто початкове зображення поступово піддається згорткам ґаусіанів з константою
           $k$ на кожну епоху. При чому кожна епоха відрізняється між собою значенням $k = 2^{1/s}$,
           де $s$ число, що показує на скільки інтервалів розділити кожну епоху.
           В стеку однієї епохи зберігається $s+3$ зображень. Коли епоха завершиться, то
-          створюється нове Гаусове зображення з двох найвищих в стеку,
+          створюється нове ґаусове зображення з двох найвищих в стеку,
           взяттям кожного 2-го пікселя рядка і колонки.
 
           \begin{figure}[H]
               \centering
-              \includegraphics[width=0.6\textwidth]{images/sift1}
-              \caption{Знаходження різниць гаусіанів 1-го етапу SIFT}
-              \label{fig:swift1}
+              \includegraphics[width=0.5\textwidth]{images/sift1}
+              \caption{Знаходження різниць ґаусіанів 1-ий етап SIFT \cite{sift}
+                  \label{fig:swift1}
+              }
           \end{figure}
 
           \subitem \textbf{Пошук локальних екстремумів} \\
-          Для знаходження локальних екстремумів зображення різниці гаусіан
-          якоїсь точки беруться 8 сусідів цього ж зображення і 9 зображення різниць
-          зверху та знизу. Точка є екстремум якщо вона значення її більше або менше за
+          Для знаходження локальних екстремумів (Рис. \ref{fig:swift2}) зображення
+          різниці ґаусіан якоїсь точки беруться 8 сусідів цього ж зображення і 9 зображення
+          різниць зверху та знизу. Точка є екстремум якщо вона значення її більше або менше за
           значення всіх її сусідів.
 
           \begin{figure}[H]
               \centering
               \includegraphics[width=0.3\textwidth]{images/sift2}
-              \caption{Знаходження різниць гаусіанів 1-го етапу SIFT}
-              \label{fig:swift2}
+              \caption{Пошук локальних екстремумів: 2-ий етап SIFT \cite{sift}
+                  \label{fig:swift2}
+              }
           \end{figure}
 
-          \subitem \textbf{Частота вибірки по масштабу} \\
+          \subitem \textbf{Частота вибірки по масштабу.} \\
           Тут автор обґрунтовує кількість того, скільки разів потрібно робити
-          зміну масштабу зображення. Експерименти показують, що на даному етапі метод дає
-          велику кількість кандидатів екстремумів, і що це дуже важко обрахувати їх всі.
+          зміну масштабу зображення. Експерименти показують (Рис. \ref{fig:swift3}),
+          що на даному етапі метод дає велику кількість кандидатів екстремумів,
+          і що це дуже важко обрахувати їх всі.
+
           \begin{figure}[H]
               \centering
               \includegraphics[width=0.4\textwidth]{images/sift3}
               \caption{Графік залежності кількості змін масштабу на кожну епоху до
-                  кількості ключових точок на зображенні}
-              \label{fig:swift3}
+                  кількості ключових точок на зображенні  \cite{sift}
+                  \label{fig:swift3}
+              }
           \end{figure}
 
-          \subitem \textbf{Частота вибірки по простору} \\
+          \subitem \textbf{Частота вибірки по простору.} \\
           Пропонується використовувати оптимальне значення $\sigma = 1.6$ при якому
-          маємо найбільший відсоток співпадіння екстремумів при багаторазовому повторенні
+          маємо найбільший відсоток збігів екстремумів при багаторазовому повторенні
           експерименту.
 
-    \item \textbf{Точна локалізація ключових точок}
+    \item \textbf{Точна локалізація ключових точок.} \\
           Після знаходження точок-кандидатів потрібно відсіяти точки зі слабким контрастом на основі
           інформації масштабів та відношення головних викривлень. Для цього застосовується розклад
           Тейлора масштабно-просторової функції $D(x,y,\sigma)$ в точці $\textbf{x} = (x,y,\sigma)$.
@@ -109,8 +112,8 @@
                   \textbf{x}^2}\frac{\partial D }{\partial \textbf{x}}
               \label{eq:extremum}
           \end{equation}
-          Підставивши \ref{eq:extremum} у  \ref{eq:tailor_1} маємо можливість відсіяти нестабільні
-          екстремуми по модулю значення (рис. \ref{fig:sift45}):
+          Підставивши \ref{eq:extremum} у  \ref{eq:tailor_1}, маємо можливість відсіяти нестабільні
+          екстремуми по модулю значення (Рис. \ref{fig:sift45}):
           \begin{equation}
               D(\widehat{\textbf{x}}) = D + \frac{1}{2}\frac{\partial D^{T} }{\partial \textbf{x}}\widehat{\textbf{x}}
           \end{equation}
@@ -132,31 +135,33 @@
                       \label{fig:swift5}
                   }
               \end{subfigure}
-              \caption{Приклад відсіювання екстремумів
+              \caption{Приклад відсіювання екстремумів \cite{sift}
                   \label{fig:sift45}
               }
           \end{figure}
-          Тобто обмежуючи $|D(\widehat{\textbf{x}})| < \alpha$. Якщо кожен піксель в діапазоні $[0,1]$, то і
+          Тобто обмежуючи $|D(\widehat{\textbf{x}})| < \alpha$.
+          Якщо кожен піксель в діапазоні $[0,1]$, то і
           $ \alpha \in [0,1]$.
-    \item \textbf{Визначення орієнтації градієнтів} \\
+    \item \textbf{Визначення орієнтації градієнтів.} \\
           До кожної точки визначається декілька орієнтацій градієнтів.
           Магнітуда градієнта по сусідам $m(x,y)$ та його орієнтація $\theta(x,y)$:
           \begin{equation}
-              m(x,y) = \sqrt{(L(x+1,y) - (L(x-1,y))^2 + (L(x,y+1) - L(x,y-1))^2}
+              m(x,y) = \sqrt{(L(x+1,y) - L(x-1,y))^2 + (L(x,y+1) - L(x,y-1))^2}
           \end{equation}
           \begin{equation}
               \theta(x,y) = \tan^{-1} (L(x,y+1) - L(x,y-1))/(L(x+1,y) - L(x-1,y))
           \end{equation}
-          , де $L(x,y)$ - значення згладженого гаусового зображення з найближчим масштабом.
+          , де $L(x,y)$ - значення згладженого ґаусового зображення з найближчим масштабом.
 
-    \item \textbf{Дескриптор точок} \\
+    \item \textbf{Дескриптор точок.} \\
           Локальні градієнти обчислюються для кожного масштабу навколо кожної ключової точки.
           Створюються дескриптори кожної ключової точки.
           \begin{figure}[H]
               \centering
               \includegraphics[width=0.5\textwidth]{images/sift6}
-              \caption{Створення дескрипторів точок}
-              \label{fig:swift6}
+              \caption{Створення дескрипторів точок \cite{sift}
+                  \label{fig:swift6}
+              }
           \end{figure}
 \end{enumerate}
 
@@ -197,14 +202,14 @@
 Тобто для кожного дескриптора першого зображення шукаємо найближчий на другому.
 Маючи список відповідних дескрипторів можна знайти відповідні точки на обох зображеннях.
 
-Приклад застосування SIFT разом з Brute Force Matcher (Рис. \ref{fig:matches_img}) на 
+Приклад застосування SIFT разом з Brute Force Matcher (Рис. \ref{fig:matches_img}) на
 дошці з викладачем наведений нижче.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{images/matches_img}
-    \caption{Кадри $F^i$ та $F^{i+s}$ з ключовими точками та лініями, 
-    які поєднують відповідні точки з відео \cite{yakovlev_video}
-    \label{fig:matches_img}
+    \caption{Кадри $F^i$ та $F^{i+s}$ з ключовими точками та лініями,
+        які поєднують відповідні точки з відео \cite{yakovlev_discrete_math_video}
+        \label{fig:matches_img}
     }
 \end{figure}
