--- a/7_panorama/4_panorama_creating.tex
+++ b/7_panorama/4_panorama_creating.tex
@@ -13,7 +13,7 @@
     \centering
     \includegraphics[width=0.8\textwidth]{images/panorama_example}
     \caption{Приклад отриманої панорами з автоматичним видаленням
-    викладача з відео
+    викладача з відео \cite{fpmi_2021_video}
     \label{fig:panorama_example}
     }
 \end{figure}
@@ -111,7 +111,6 @@
     \end{algorithmic}
     \label{al:panorama_creating_algorithm}
 \end{algorithm}
-
 
 \section{Створення слайдів з відео}
 
