--- a/index.tex
+++ b/index.tex
@@ -65,4 +65,11 @@
 \import{7_panorama/}{main.tex}
 \import{8_results/}{main.tex}
 
+
+\clearpage
+\phantomsection
+\addcontentsline{toc}{chapter}{Перелік посилань}
+\renewcommand\bibname{Перелік посилань}
+\bibliography{bibliography.bib}
+
 \end{document}
