--- a/4_analogs/3_conclusion.tex
+++ b/4_analogs/3_conclusion.tex
@@ -1,7 +1,7 @@
 \chapterConclusion
 
 Як ми бачимо, всі вищеописані алгоритми є частковими (тобто не повністю вирішують всі проблеми
-з оцифруванням дошки): якісь методи опрацьовують тільки написи з дошки, 
+з оцифруванням дошки): деякі методи опрацьовують тільки написи з дошки, 
 при чому досить непогано; якісь роблять панорамні знімки тільки з фотографій дошки.
 Спільними елементами вищеописаних алгоритмів-аналогів є використання 
 темпорального медіанного фільтру для видалення рухомих об'єктів.
