--- a/5_problem/1_preface.tex
+++ b/5_problem/1_preface.tex
@@ -1,3 +1,3 @@
-У другому розділі робиться постановка головних 
+У другому розділі описується постановка головних 
 задач та можливих рішень для отримання в 
 результаті панорамних знімків.
