--- a/5_problem/2_problem.tex
+++ b/5_problem/2_problem.tex
@@ -1,7 +1,7 @@
 \section{Постановка задачі}
 
-Головними цілями даної роботи створити власну інформаційну технологію
-на вхід якої буде даватись відео-лекція, а на вихід панорамні слайди
+Головна ціль даної роботи  - це створення власної інформаційної технології
+на вхід якої буде даватись відео лекції, а на вихід панорамні слайди
 без викладача.
 
 Для одержання бажаних результатів було запропоновано
@@ -11,26 +11,25 @@
 	      \textbf{Стабілізація кадрів} \\
 	      Багато відео лекцій записуються не в найкращих умовах.
 	      Камера може випадково затруситися, якщо її прикріпити до столу
-	      де студенти пишуть лекцію f,j або закріплена не стабільно, таким чином
+	      де студенти пишуть лекцію, або закріплена не стабільно, таким чином
 	      це заважає нормально слухати лекцію і фокусуватись на написах дошки.
 
 	\item
 	      \textbf{Прибирання викладача} \\
-	      Також однією з головних задач є видалення викладача з відео, оскільки
+	      Також однією із задач є видалення викладача з відео, оскільки
 	      було поставлено за мету надавати користувачу чисті написи з дошки.
 	      Є чимало методів як вирішувати цю задачу. Можна локалізувати тільки
 	      людину, а можна і всі об'єкти, що рухаються в площині дошки. Маючи
-	      дані про положення в кадрі викладача ми матимемо змогу оновлювати
-	      з часом інформацію з дошки яка була тимчасово перекрита.
+	      дані про положення в кадрі викладача, ми матимемо змогу оновлювати
+	      з часом інформацію з дошки, яка була тимчасово перекрита.
 
 	\item
 	      \textbf{Створення панорамних слайдів} \\
 	      Часто, коли дошки сильно об'ємні по площі камера знімає тільки ту частину де
-	      викладач щось пише. Під час лекції камеру переміщають так, щоб лектор був завжди
+	      викладач щось пише. Під час лекції камеру переміщують так, щоб лектор був завжди
 	      в полі зору. Таким чином, якщо студент не встиг переписати все з однієї частини
 	      дошки, а камеру перемістили, то учень втрачає частину інформації. Було б добре
 	      мати слайди, які по мірі руху камери містили всю дошку.
-
 
 	\item
 	      \textbf{Оцифровування написів} \\
