--- a/6_mask/5_conclusion.tex
+++ b/6_mask/5_conclusion.tex
@@ -3,7 +3,7 @@
 Було розглянуто алгоритм Бойкова-Колмогорова для
 отримання маски рухомих об'єктів. Також описано
 згорткові мережі YOLO, MobileNet, SSD, R-CNN
-як спосіб детектування та локалізувати людину. 
+як спосіб детектування людини. 
 Описано архітектури, переваги та недоліки кожної 
 згорткової мережі.
 Дані методи є досить швидкими, щоб 
